--- a/contacto.html
+++ b/contacto.html
@@ -182,7 +182,7 @@
 
           <p class="contact-label">Llámanos</p>
 
-          <a href="tel:+34 123 456 789" class="body-1 contact-number hover-underline">
+          <a href="tel:+34123456789" class="body-1 contact-number hover-underline">
             +34 123 456 789
           </a>
         </div>
@@ -334,7 +334,7 @@
                     <div class="icon-wrapper">
                       <ion-icon name="person-outline" aria-hidden="true"></ion-icon>
                       <select name="person" class="input-field" required>
-                        <option value="1-person">1 Person</option>
+                        <option value="">1 Person</option>
                         <option value="2-person">2 Person</option>
                         <option value="3-person">3 Person</option>
                         <option value="4-person">4 Person</option>
@@ -352,7 +352,7 @@
                     <div class="icon-wrapper">
                       <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
                       <select name="time" class="input-field" required>
-                        <option value="01:00pm">01 : 00 pm</option>
+                        <option value="">01 : 00 pm</option>
                         <option value="02:00pm">02 : 00 pm</option>
                         <option value="03:00pm">03 : 00 pm</option>
                         <option value="04:00pm">04 : 00 pm</option>
