--- a/carta.html
+++ b/carta.html
@@ -126,7 +126,7 @@
           <a href="mailto:tfgpabloruiz@tokioschool.com" class="body-4 sidebar-link">tfgpabloruiz@tokioschool.com</a>
           <div class="separator"></div>
           <p class="contact-label">Llámanos</p>
-          <a href="tel:+34 123 456 789" class="body-1 contact-number hover-underline">
+          <a href="tel:+34123456789" class="body-1 contact-number hover-underline">
             +34 123 456 789
           </a>
         </div>
