--- a/grupos.html
+++ b/grupos.html
@@ -232,7 +232,7 @@
           <a href="mailto:info@izakayasakura.com" class="body-4 sidebar-link">info@izakayasakura.com</a>
           <div class="separator"></div>
           <p class="contact-label">Llámanos</p>
-          <a href="tel:+34 123 456 789" class="body-1 contact-number hover-underline">
+          <a href="tel:+34123456789" class="body-1 contact-number hover-underline">
             +34 123 456 789
           </a>
         </div>
