--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
           <p class="contact-label">Llámanos</p>
 
-          <a href="tel:+34 123 456 789" class="body-1 contact-number hover-underline">
+          <a href="tel:+34123456789" class="body-1 contact-number hover-underline">
             +34 123 456 789
           </a>
         </div>
@@ -206,12 +206,7 @@
     </div>
   </header>
 
-
-
-
-
-  <main>
-    <article>
+  
 
       <!-- 
         - #HERO
@@ -415,7 +410,7 @@
         - #ABOUT
       -->
 
-      <section class="section about text-center" aria-labelledby="about-label" id="about">
+      <section class="section about text-center" id="about">
         <div class="container">
           <div class="about-content">
             <p class="label-2 section-subtitle" id="about-label">Nuestra historia</p>
@@ -441,7 +436,7 @@
         - #SPECIAL DISH
       -->
 
-      <section class="special-dish text-center" aria-labelledby="dish-label">
+      <section class="special-dish text-center">
 
         <div class="special-dish-banner">
           <img src="./assets/images/special-dish-banner.jpg" width="940" height="900" loading="lazy" alt="special dish"
