--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="container">
 
       <a href="/index.html" class="logo">
-        <img src="./assets/images/logo.png" width="160" height="50" alt="Grilli - Home">
+        <img src="./assets/images/logo.png" width="160" height="50" alt="Izakaya Sakura - Inicio">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -120,7 +120,7 @@
         </button>
 
         <a href="#" class="logo">
-          <img src="./assets/images/logo.png" width="160" height="50" alt="Grilli - Home">
+          <img src="./assets/images/logo.png" width="160" height="50" alt="Ikazaya Sakura - Inicio">
         </a>
 
         <ul class="navbar-list">
